# AspectNova

./: .gitattributes  .gitignore  DV_BASELINE_EVIDENCE.txt  README.md  README_DV_BASELINE.md  REPO_SCOPE.md  __direct_push_should_fail.txt  __final_flow_test.txt  __flow_test_2.txt  __pr_check_1.txt  __pr_flow_probe_20260303-001139.txt  __rerun_marker.txt  bad_forbidden.ps1  dv.ps1  fix_bom_extractor.py  refactor_v1_2_step2_fix_import_path.py  tmp_lock_test.txt
agent/: .gitignore  README.md  RULES.md  agent.cmd  agent.ps1  config.v1.yaml  dv.ps1  pyproject.toml  run_approval_stage.py  run_command_plan_stage.py  run_evidence_stage.py  run_execution_stage.py  run_finalizer_stage.py  run_integrity_stage.py  run_manifest_stage.py  run_owner_stage.py  run_pipeline.py  run_preflight_stage.py  run_scan_normalizer.py  run_scan_stage.py  run_verdict_stage.py
agent/contracts/: README.md  stage_contracts.v1.yml
agent/policies/: approval.policy.json  command_plan.policy.json  command_plan.policy.manual.json  evidence_pack.policy.json  execution.policy.json  finalizer.policy.json  integrity.policy.json  manifest.policy.json  owner_enricher.policy.json  owner_enricher.policy.manual.json  preflight.policy.json  scan_normalizer.policy.json  verdict.policy.json  verdict.policy.manual.json
agent/src/: run_scan.py  to_items.py
agent/stages/: builder_scan.py  enrich_owner.py  stage_base.py  write_py.ps1
agent/tests/: test_config_load.py  test_output_schema.py  test_output_schema_v1.py
agent/tools/: compat_registry.json  fix_bom_policies.ps1  gate_approval.py  gate_command_plan.py  (+28 more)
(+258 files in other folders)
